# rust_learning

./: Cargo.toml  index.html  second.html
basic_blockchain_example/: Cargo.toml
basic_blockchain_example/src/: main.rs  structures.rs
chat-tokio-stream/: Cargo.toml
chat-tokio-stream/src/: main.rs
learning/src/: advanced_functions_and_closures.rs  advanced_traits.rs  advanced_types.rs  closures.rs  concurrency.rs  generics.rs  lib.rs  macros.rs  oop.rs  patterns_mappings.rs  smart_pointers.rs  unsafe_rust.rs
learning/tests/: integration_test.rs
managing_projects/: Cargo.toml
managing_projects/src/: lib.rs  main.rs  service.rs  some_module.rs
managing_projects/tests/: rand_math.rs
rust_websocket/: Cargo.toml
rust_websocket/src/: handler.rs  lib.rs  main.rs  structures.rs
server_with_actix/: Cargo.toml
server_with_actix/src/: main.rs
server_with_rocket/: Cargo.toml
server_with_rocket/src/: main.rs
server_with_standard_library/: Cargo.toml
server_with_standard_library/src/: lib.rs  main.rs
server_with_tide/: Cargo.toml
server_with_tide/src/: main.rs
server_with_warp/: Cargo.toml
server_with_warp/src/: main.rs
src/: closures.rs  collections.rs  exceptions.rs  iterator.rs  learning.rs  lib.rs  main.rs  structures.rs  tests.rs  traits.rs
src/closures/: closures_as_variables.rs  example.rs  links_and_ownership.rs
src/collections/: string.rs  vector.rs
src/exceptions/: non_recoverable_panic.rs  propagating_error.rs  unwrap_expect.rs
tasks/: Cargo.toml
tasks/src/: lib.rs  (+18 more)
tests/: integration_test.rs
tokio_async/: Cargo.toml
(+99 files in other folders)
