[package]
name = "server_with_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.195", features = ["serde_derive"] }
uuid = { version = "1.6.1", features = ["v4"] }
